# project-ancestrum

./: .gitignore  Cargo.toml  LICENSE  README.md  env.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: commands.rs  lib.rs  models.rs  storage.rs  utils.rs
frontend/: App.vue  main.ts
frontend/views/: HomeView.vue
src/: main.rs  models.rs  storage.rs  ui.rs
src-backend/: Cargo.toml
src-backend/api/: main.rs  models.rs  storage.rs
src-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src-frontend/app/: App.vue  main.ts
src-frontend/app/components/: PersonCard.vue  PersonForm.vue
src-frontend/app/plugins/: tauri.ts
src-frontend/app/services/: api.ts
src-frontend/app/store/: familyTree.ts
src-frontend/app/types/: familyTree.ts  index.ts  person.ts  relationship.ts
src-tauri/: Cargo.toml  commands.rs  lib.rs  main.rs  tauri.conf.json
src-tauri/api/: handlers.rs  main.rs
src-tauri/models/: family_tree.rs  gender.rs  person.rs  relationship.rs
src-tauri/src/: main.rs
src-tauri/src/api/: handlers.rs
src-tauri/src/models/: family_tree.rs  gender.rs  mod.rs  person.rs  relationship.rs
src/models/: family_tree.rs  gender.rs  mod.rs  person.rs
src/ui/: ancestrum_app.rs  message.rs  mod.rs
