[package]
name = "project-ancestrum"
version = "0.1.0"
description = "A desktop application for managing family trees"
authors = ["Leo Kukhar"]
license = "MIT"
edition = "2021"

[dependencies]
iced = { version = "0.12.1", features = ["canvas", "image", "svg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = { version = "0.6.3", features = ["serde-1"] }
directories = "5.0.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

