[package]
name = "ancestrum-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6.3"
directories = "5.0.1"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
futures = "0.3" 