[package]
name = "ancestrum"
version = "0.1.0"
description = "A family tree application"
authors = ["Leo Kukhar"]
license = "https://github.com/lkukhar/project-ancestrum/blob/main/LICENSE"
repository = "https://github.com/lkukhar/project-ancestrum"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tauri-plugin-fs = "2.0.0-beta.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
